chore: Skips previews if skip-preview label is applied

--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -12,6 +12,7 @@ env:
 
 jobs:
   review_app:
+    if: github.event.pull_request.labels.*.name != 'skip-deploy'
     runs-on: ubuntu-latest
     outputs:
       url: ${{ steps.deploy.outputs.url }}
