--- a/.github/workflows/previews.yml
+++ b/.github/workflows/previews.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   review_app:
-    if: github.event.pull_request.labels.*.name != 'skip-deploy'
+    if: !contains(github.event.issue.labels.*.name, 'skip-deploy')
     runs-on: ubuntu-latest
     outputs:
       url: ${{ steps.deploy.outputs.url }}
