--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/db": "^0.14.5",
     "@astrojs/tailwind": "^5.1.4",
+    "@tailwindcss/vite": "^4.0.15",
     "astro": "^5.1.1",
-    "tailwindcss": "^3.4.8",
+    "tailwindcss": "^4.0.15",
     "typescript": "^5.5.4"
   }
 }
