--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "burbridge-lol",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/db": "^0.14.5",
-    "@astrojs/tailwind": "^5.1.4",
-    "@tailwindcss/vite": "^4.0.15",
-    "astro": "^5.1.1",
-    "tailwindcss": "^4.0.15",
-    "typescript": "^5.5.4"
-  },
-  "packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a"
+	"name": "burbridge-lol",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro check && astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"format": "biome format"
+	},
+	"dependencies": {
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/db": "^0.14.5",
+		"@astrojs/tailwind": "^5.1.4",
+		"@tailwindcss/vite": "^4.0.15",
+		"astro": "^5.1.1",
+		"tailwindcss": "^4.0.15",
+		"typescript": "^5.5.4"
+	},
+	"packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4"
+	}
 }
