--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
 	"[astro]": {
 		"editor.defaultFormatter": "biomejs.biome",
 		"editor.formatOnSave": true
+  },
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome",
+		"editor.formatOnSave": true
   }
 }
