--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,9 @@
 	},
 	"files": {
 		"ignoreUnknown": false,
-		"ignore": []
+		"ignore": [
+      "generated/"
+    ]
 	},
 	"formatter": {
 		"enabled": true,
