--- a/package.json
+++ b/package.json
@@ -5,23 +5,28 @@
 	"scripts": {
 		"dev": "astro dev",
 		"start": "astro dev",
-		"build": "astro check && astro build",
+		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro",
 		"format": "biome format",
-    "new:blog": "deno run --allow-write --allow-read scripts/add-blog.ts"
+		"new:blog": "deno run --allow-write --allow-read scripts/add-blog.ts"
 	},
 	"dependencies": {
 		"@astrojs/check": "^0.9.4",
 		"@astrojs/db": "^0.14.5",
+		"@astrojs/node": "^9.5.2",
 		"@astrojs/tailwind": "^5.1.4",
 		"@tailwindcss/vite": "^4.0.15",
 		"astro": "^5.1.1",
 		"tailwindcss": "^4.0.15",
 		"typescript": "^5.5.4"
 	},
-	"packageManager": "pnpm@9.15.3+sha512.1f79bc245a66eb0b07c5d4d83131240774642caaa86ef7d0434ab47c0d16f66b04e21e0c086eb61e62c77efc4d7f7ec071afad3796af64892fae66509173893a",
+	"packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
 	"devDependencies": {
-		"@biomejs/biome": "^1.9.4"
+		"@biomejs/biome": "^1.9.4",
+		"@strapi/strapi": "5.33.2"
+	},
+	"imports": {
+		"#app.css": "./src/app.css"
 	}
 }
