--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,15 +7,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Set up Flyctl
+        uses: superfly/flyctl-actions/setup-flyctl@v1
 
-    - name: Set up Flyctl
-      uses: superfly/flyctl-actions/setup-flyctl@v1
-
-    - name: Deploy to Fly.io
-      env:
-        FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-      run: |
-        flyctl deploy --remote-only
+      - name: Deploy to Fly.io
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          STRAPI_API: ${{ secrets.STRAPI_API }}
+        run: |
+          flyctl deploy --remote-only --build-args=STRAPI_API
