--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,15 @@
-# fly.toml app configuration file generated for burbridge-lol on 2024-11-22T05:20:59Z
+# fly.toml app configuration file generated for burbridge-lol-5jf9mw on 2026-01-27T17:54:06Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'burbridge-lol'
-primary_region = 'sjc'
+app = 'burbridge-lol-5jf9mw'
+primary_region = 'iad'
 
 [build]
 
 [http_service]
-  internal_port = 80
+  internal_port = 4321
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
