--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,6 @@
   "[typescript]": {
     "editor.defaultFormatter": "biomejs.biome",
 		"editor.formatOnSave": true
-  }
+  },
+	"search.showLineNumbers": true,
 }
