--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,5 @@ jobs:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
           STRAPI_API: ${{ secrets.STRAPI_API }}
         run: |
+          cd web
           flyctl deploy --remote-only --build-args=STRAPI_API
