--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
 
+      - run: cd web
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
