--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -19,8 +19,12 @@ jobs:
       - name: Install pnpm
         uses: pnpm/action-setup@v4
 
+      - run: cd web
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Run BiomeJS
-        run: pnpm biome
+        run: |
+          cd web
+          pnpm biome ci
