--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,10 +7,10 @@
 	"[astro]": {
 		"editor.defaultFormatter": "biomejs.biome",
 		"editor.formatOnSave": true
-  },
-  "[typescript]": {
+	},
+	"[typescript]": {
     "editor.defaultFormatter": "biomejs.biome",
 		"editor.formatOnSave": true
-  },
-	"search.showLineNumbers": true,
+	},
+	"search.showLineNumbers": true
 }
