--- a/package.json
+++ b/package.json
@@ -1,32 +1,14 @@
 {
-	"name": "burbridge-lol",
-	"type": "module",
-	"version": "0.0.1",
-	"scripts": {
-		"dev": "astro dev",
-		"start": "astro dev",
-		"build": "astro build",
-		"preview": "astro preview",
-		"astro": "astro",
-		"format": "biome format",
-		"new:blog": "deno run --allow-write --allow-read scripts/add-blog.ts"
-	},
-	"dependencies": {
-		"@astrojs/check": "^0.9.4",
-		"@astrojs/db": "^0.14.5",
-		"@astrojs/node": "^9.5.2",
-		"@astrojs/tailwind": "^5.1.4",
-		"@tailwindcss/vite": "^4.0.15",
-		"astro": "^5.1.1",
-		"tailwindcss": "^4.0.15",
-		"typescript": "^5.5.4"
-	},
-	"packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
-	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"@strapi/strapi": "5.33.2"
-	},
-	"imports": {
-		"#app.css": "./src/app.css"
-	}
+  "name": "burbridge-lol-mono",
+  "scripts": {
+    "dev": "turbo run dev --ui tui",
+    "lint": "turbo run lint"
+  },
+  "devDependencies": {
+    "turbo": "^2.8.1"
+  },
+  "packageManager": "pnpm@10.28.2+sha512.41872f037ad22f7348e3b1debbaf7e867cfd448f2726d9cf74c08f19507c31d2c8e7a11525b983febc2df640b5438dee6023ebb1f84ed43cc2d654d2bc326264",
+  "dependencies": {
+    "@changesets/cli": "^2.29.8"
+  }
 }
