--- a/web/package.json
+++ b/web/package.json
@@ -20,15 +20,18 @@
 		"@astrojs/db": "^0.14.5",
 		"@astrojs/node": "^9.5.2",
 		"@astrojs/tailwind": "^5.1.4",
+		"@payload-bites/astro-richtext-renderer": "^2.2.0",
 		"@tailwindcss/vite": "^4.0.15",
 		"astro": "^5.1.1",
+		"payload": "3.76.1",
 		"tailwindcss": "^4.0.15",
 		"typescript": "^5.5.4"
 	},
 	"packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"@strapi/strapi": "5.33.2"
+		"@burbridge/payload": "workspace:*",
+		"@strapi/strapi": "5.35.0"
 	},
 	"imports": {
 		"#app.css": "./src/app.css"
